# classifier

./: .gitignore  README.md  dataset.ipynb  empty.ipynb  eval.ipynb  main.py  model.ipynb  pyproject.toml  swishnet_times_0_epoch_410(random).pth  test.ipynb  train.ipynb
preprocessing/: preprocessing.ipynb  preprocessing_random.ipynb
unsplited/: spliter.ipynb
