[project]
name = "swishnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "import-ipynb>=0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]
